[project]
name = "api-health-monitor"
version = "0.1.0"
description = "A Python API health-checking tool with timeout handling, error detection, and structured health results."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
api-health-monitor = "api_health_monitor.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
